--------------------

.. contents::

IN DEVELOPMENT
--------------

  USER-VISIBLE CHANGES:

  NEW FEATURES:

  IMPROVEMENTS:

    * ``bzr dump-btree`` is a hidden command introduced to allow dumping
      the contents of a compressed btree file.  (John Arbash Meinel)

    * default username for bzr+ssh and sftp can be configured in
      authentication.conf. (Aaron Bentley)

  BUG FIXES:

  DOCUMENTATION:

  API CHANGES:

  TESTING:

  INTERNALS:


bzr 1.8rc1 2008-10-07
---------------------

Bazaar 1.8 includes several fixes that improve working tree performance,
display of revision logs, and merges.  We've also fixed, and the bzr
testsuite now passes on OS X and Python 2.6, and almost completely passes
on Windows.  The smartserver code has gained several bug fixes and
performance improvements, and can now run server-side hooks within an http
server.

  CHANGES:

    * ``bzr log file`` has been changed. It now uses a different method
      for determining which revisions to show as merging the changes to
      the file. It now only shows revisions which merged the change
      towards your mainline. This simplifies the output, makes it faster,
      and reduces memory consumption.  (John Arbash Meinel)

    * ``bzr merge`` now defaults to having ``--reprocess`` set, whenever
      ``--show-base`` is not supplied.  (John Arbash Meinel)

    * ``bzr+http//`` will now optionally load plugins and write logs on the
      server. (Marius Kruger)

    * ``bzrlib._dirstate_helpers_c.pyx`` does not compile correctly with
      Pyrex 0.9.4.1 (it generates C code which causes segfaults). We
      explicitly blacklist that version of the compiler for that
      extension. Packaged versions will include .c files created with
      pyrex >= 0.9.6 so it doesn't effect releases, only users running
      from the source tree. (John Arbash Meinel, #276868)

  FEATURES:

    * bzr is now compatible with python-2.6. python-2.6 is not yet officially